gcc/testsuite/rust/rustc/ui/generator/async-generator-issue-67158.rs
#![feature(generators)]
// edition:2018
// Regression test for #67158.
fn main() {
    async { yield print!(":C") }; // { dg-error ".E0727." "" { target *-*-* } }
}

